# PCtrl

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
release-files/appimage/: build_appimage.sh
release-files/deb/pctrl_1.0.0_amd64/control/: control  md5sums
release-files/deb/pctrl_1.0.0_amd64/data/usr/share/applications/: pctrl.desktop
src/: App.css  App.jsx  ProcessInfo.jsx  ProcessesTable.jsx  ProcessesTree.jsx  SystemInfo.jsx  main.jsx  main.rs  ourMods.rs  structures.rs  styles.css  theme.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  our_mods.rs
src-tauri/src/our_mods/: backgndPrc.rs  gui.rs  proc_functions.rs  structures.rs  tui.rs
src/ourMods/: backgndPrc.rs  proc_functions.rs  structures.rs  tui.rs
