[package]
name = "lpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procfs = "0.15.1"
users = "0.11"
queues = "1.0.2"
fs = "0.0.5"
cursive = { version = "0.20", features = ["toml"] }
# cursive = "0.20"
cursive_table_view = "0.14"
chrono = "0.4.24"
