[package]
name = "pctrl"
version = "1.0.0"
description = "A powerful process manager with both a GUI and a TUI"
authors = ["Mohamed Sherif", "Ali Eissa", "Youssef Fares"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
procfs = "0.15.1"
users = "0.11"
queues = "1.0.2"
fs = "0.0.5"
cursive = { version = "0.20", features = ["toml"] }
cursive_table_view = "0.14"
chrono = {version = "0.4.24", features = ["serde"] }
clap = "4.2.2"
dirs = "5.0"
sysinfo = "0.28.4"
const-default = "1.0.0"
once_cell = "1.17.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
